Get item review (#115)
* Added get reviews database queries

* Added getItemReviews response creation function

* Added route handler

* Added api documentation

---------
